# trading-ai-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.langfuse.yml  docker-compose.yml  justfile  plan.md  pyproject.toml
__liquidity_agent/: liquidity_repo_dashboard_reference.md
__liquidity_agent/gpt_vibe_coded/: README.md  env.example  liquidity_dashboard.py
docs/: ARCHITECTURE.md
liquidity_agent/: problem_context.md
src/app/agents/: fundamental_agent.py  general.py  option_agent.py  sentiment_agent.py
src/app/agents/nodes/: __init__.py  fundamental_analysis_node.py  option_analysis_node.py  recurring_task_node.py  sentiment_analysis_node.py  synthesize_node.py  task_classification_node.py
src/app/agents/prompts/: fundamental_analysis_agent_prompt.txt  options_analysis_agent_prompt.txt  sentiment_analysis_agent_prompt.txt  synthesize_prompt.txt  task_classification_prompt.txt
src/app/agents/tools/: option_tools.py  (+3 more)
src/app/cli/: query.py  visualize.py
src/app/config/: __init__.py  config.py  models.py  settings.py
src/app/domain/: models.py  ports.py  schemas.py
src/app/graph/: __init__.py  graph.py  state.py
src/app/observability/: langfuse.py
src/app/services/: fundamental_service.py  news_service.py  options_service.py
src/app/ui/: chainlit_app.py  openwebui_pipeline.py
test_cases/sentiment_decision/: notes.json  pavs-03-12-2025.txt
test_cases/technical_decision/: finviz_intc_12_22_2025_before_market_option_chain.csv  notes.json  spy_quarter_expir_19_12_2025_option_chain.csv
tests/: lf.py
tests/graph/: conftest.py  test_graph.py
(+36 files in other folders)
