[project]
name = "trading-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.1.0,<25.0.0",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.2.4",
    "pydantic-settings>=2.12.0",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "trafilatura>=2.0.0",
    "tqdm>=4.67.1",
    "langchain-anthropic>=1.3.4",
    "chainlit==2.10.0",
    "just>=0.8.165",
    "langfuse>=4.0.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
